[package]
name = "async_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures-core = "0.3"
pin-project = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = "0.1.8"
