[package]
name = "async-hofs"
version = "0.1.1"
description = "Various extention traits for providing asynchronous higher-order functions"
edition = "2021"
license = "MIT"
repository = "https://github.com/kawaemon/async-hofs"
categories = ["asynchronous", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
pin-project = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
